www/css/register.css
/* ... */
@media handheld, only screen and (max-width: 480px) {
    .regmsg_popup {left: 23%; top: 66px}
    .regmsg_hldrbx {width: 100%}
    #register_holder > fieldset > span{
        width:290px;
    }
}

@media handheld, only screen and (max-width: 360px) {
    .registerbx {width: 93.4%}
    .regmsg_popup {left: 18%}
    #register_holder fieldset select{width:100%} 
    #regmsg_modal{
        margin-top: 40% !important
    }
}

@media handheld, only screen and (max-width: 320px) {
    .registerbx {margin-left: 5px; width: 93%}
    #register_holder fieldset select{width:100%} 
    .regmsg_popup {left: 11%}
	select {-webkit-appearance: listbox; padding: 0px 5px !important}
#regmsg_modal{margin-top: 30% !important}
}

@media only and (max-width: 767px) and (orientation: landscape)  {
    .acc_tilebx { width:352px !important;}
}

.guideNotes{
    clear: both;
    padding-left:0;
    font-size: 11px!important;
    color: #85a095!important;
display:inline-block;
line-height:normal;	
width:45%;
padding-top:5px;
}
#register_holder .japan_guiding { font-size:13px !important;}
.clearboth { clear:both; font-size:0; width:100%;}
#register_holder .reg-text-rt { float:left; width:80%;}

@media handheld, only screen and (max-width: 767px) {
body #register_holder fieldset input, body #register_holder fieldset select { width:100%;}
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px){
 body #register_holder .reg-text-rt {float: left;
    width: 50%;
	}
		body #register_holder > fieldset > span { width:auto;}
body #register_holder fieldset input, body #register_holder fieldset select { width:100%;}
  /* For landscape layouts only */
}

@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) 
and (orientation : landscape) {
body span.guideNotes { width:100% !important;}
}

